# empower-hub-host

./: .coveragerc  .gitignore  Dockerfile  README.md
.github/: CODEOWNERS
.github/workflows/: create-ota-release.yml  unit_test.yml
CZoneCore/: CMakeLists.txt
CZoneCore/cmake/: czonelib.cmake
CZoneCore/src/: main.cpp
Config/: appsettings.json  bl654.conf  environmentfile  wap.conf
HubBL654Service/: main.py
HubBL654Service/bleService/: bleuart.py  canvas_packager.py  empower_ble_service.py  uart_message_processor.py  uart_message_processor_unittest.py
HubBL654Service/dbusService/: bl654_obj.py  server.py
HubBL654Service/utility/: cmd_interface.py  utils.py
HubCoreService/: HubCoreApp.py  setup.py
HubInterfaces/: HubInterfaces.py  hub-network-utility.py  setup.py
HubN2KService/: .clang-format  CMakeLists.txt
HubN2KService/cmake/: czonelib.cmake  versioning.cmake
HubN2KService/src/: main.cpp
HubN2KService/src/core/: coremanager.cpp  coremanager.h
HubN2KService/src/modules/czone/: configdata.cpp  configdata.h  czonedatabase.cpp  czonedatabase.h  czoneinterface.cpp  czoneinterface.h  czonesettings.cpp  czonesettings.h  czoneunitutils.cpp  czoneunitutils.h  monitoringdata.cpp  monitoringdata.h
HubN2KService/src/modules/dbus/: dbusservice.cpp  dbusservice.h
HubN2KService/src/modules/n2k/: canservice.cpp  canservice.h
HubN2KService/src/modules/n2k/pgn/: PGN_126208_Msg.h  PGN_59392_Msg.h  PGN_59904_Msg.h  pgninfo.h
HubN2KService/src/utils/: Nmea2k.pb.h  asyncworker.cpp  asyncworker.h  common.h  fileutil.cpp  fileutil.h  jsonutil.h  logger.cpp  logger.h  timestamp.h
HubProvisioningService/: app.py
HubProvisioningService/templates/: index.html
HubServerService/templates/: index.html
HubTBClientService/: README.md  main.py  mqtt_client.py  requirements.txt  requirements_docker.txt
HubTBClientService/services/: empower_service.py  location_service.py  rpc_handler_service.py  serial_service.py  sync_service.py
HubTBClientService/tb_utils/: constants.py  geo_util.py  gps_parser.py  (+2 more)
N2KClient/: client.py  config.py  main.py  setup.py
Scripts/: hub-bl654.sh  hub-network-switch.sh  hub-provisioning.sh  hub-startup.sh  hub-tbclient.sh  hub-telit.sh  hub-watchdog.sh  valid-highswitch.sh  valid-led.sh
config/: environmentfile  hublog.conf  network-config.json  ntp.conf  org.navico.HubCore.conf  org.navico.HubInterface.conf
doc/: CoreDbusService.md
hub_server/: app.py  requirements.txt
scripts/: hub-network-utility.py  hub-startup.sh
services/: hub-core.service  hub-czone.service  hub-interface.service  hub-startup.service
simulator/: Dockerfile  README.md  docker-build.sh  docker-run-command.sh  entrypoint.sh  install.sh  main.py  requirements.txt
(+310 files in other folders)
